<resources>
    <string name="successful">Successfully marked as favourites</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="api_key">AIzaSyD_mPqpv43RBl7plkEhr49a4DJdtiMOkFw</string>
    <string name="app_name">Quico</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">359582864595251</string>
    <string name="fb_login_protocol_scheme">fb359582864595251</string>
    <string name="error_passwords_do_not_match">Passwords do not match.</string>
    <string name="error_could_not_connect">Could not connect to server. Please try again later.</string>
    <string name="error_cannot_create_account">Account already exists!</string>
    <string name="error_cannot_sign_in">Please provide correct Email and Password</string>
    <string name="crash_toast_text">Sorry for inconvenience, we will get this issue fixed!</string>
    <string name="msg_connection_failed">Error! Connection to server failed.</string>
    <string name="msg_connection_error">Please check your internet connection</string>
    <string name="common.months">months</string>
    <string name="common.weeks">weeks</string>
    <string name="common.days">days</string>
    <string name="common.hrs">hrs</string>
    <string name="common.mins">mins</string>
    <string name="common.secs">secs</string>
    <string name="common.ago">ago</string>
    <string name="typeface_not_found">Typeface %$1 not found, or could not be loaded.
        Showing default typeface.</string>
    <string name="app">AnyTextView</string>
    <string name="assets_fonts_folder">fonts/</string>
    <string name="txt_enter_phone_no">Enter Phone No.</string>
    <string name="txt_register_text">Verificaion process is required to verify the phone no.</string>
    <string name="message_quit">Are you sure you want to exit?</string>
    <string name="message_wait">Please wait while data is loading.</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="click_here">  Click Here</string>
    <string name="imgdesc_signup">Sign Up</string>
    <string name="imgdesc_signin">Sign In</string>
    <string name="back_to_login"><u>Back to Login</u></string>
    <string name="remember_me">remember me</string>
    <string name="login">Login</string>
    <string name="user_name">User Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="profile">Profile</string>
    <string name="categories">Categories</string>
    <string name="messages">Messages</string>
    <string name="search_hint">Search Ads, User or Category</string>
    <string name="password_sent">Your password will be sent to your \nemail address</string>
    <string name="via_email">Via Email</string>
    <string name="via_sms">Via SMS</string>
    <string name="tell_a_friend">TELL A FRIEND</string>
    <string name="contact_email">contact@voltas.com</string>
    <string name="contact_phone">5555 555 555</string>
    <string name="enter_text">Enter Text</string>
    <string name="you_paid">YOU PAID</string>
    <string name="tap_to_rate">TAP A STAR TO RATE DRIVER</string>
    <string name="contact_address">Columbus College of Arts, New York</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and types
        etting industry. Lorem Ipsum has been the industrys standard dummy text ever sinc
        e the 1500s, when an unknown printer took a galley of type and scrambled it t
        o make a type specimen book. It has survived not only five centuries, but
         also the leap into electronic typesetting, remaining essentially unchanged
         . It was popularised in the 1960s with the release of Letraset sheets cont
         aining Lorem Ipsum passages, and more recently with desktop publishing so
         ftware like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="this_is_login_fragment">This is Login Fragment</string>
    <string name="lorem_small">Lorem Ipsum is simply dummy text of the printing and types
        etting industry. Lorem Ipsum has been the industrys standard dummy text ever sinc
        e the 1500s.</string>
    <string name="lorem_small_2">Lorem Ipsum is simply dummy text of the printing and types
        etting industry. </string>
    <string name="lorem_small_3">Lorem Ipsum is simply dummy text. </string>
    <string name="date_sample">12-12-2019 11:25:12</string>
    <string name="default_hint_text">Where are you going?</string>
    <string name="connection_lost">No Internet Found</string>
    <string name="samePassword">New password should be changed from previous password</string>
    <string name="conform_password_error">confirm password does not match</string>
    <string name="enter_confirm_password">Confirm Password Field cannot be Empty</string>
    <string name="confirmpasswordLength">Confirm Password cannot be less than 6 characters</string>
    <string name="internet_not_connected">Internet not Available</string>
    <string name="gps_question">Location is turned of Do you want to enable it ?</string>
    <string name="gps_yes">Yes</string>
    <string name="gps_no">No</string>
    <string name="wifi_question">No Network found  Do you want to enable Wifi ?</string>
    <string name="font_normal">Poppins-Regular.ttf</string>
    <string name="font_bold">Poppins-Bold.ttf</string>
    <string name="font_light">Poppins-Light.ttf</string>
    <string name="font_semibold">Poppins-SemiBold.ttf</string>
    <string name="font_italic_bold">Roboto-Italic_2.ttf</string>
    <string name="font_italic_light">Roboto-LightItalic_2.ttf</string>
    <string name="font_handwriting">segoeprb_1.ttf</string>
    <string name="notification">Notifications</string>
    <string name="notification_">Notification</string>
    <string name="sign_in">Sign In</string>
    <string name="submit">Submit</string>
    <string name="will_be_implemented">will be implemented in future version</string>
    <string name="enter_valid_number_error">Enter valid phone number format</string>
    <string name="enter_password">Password Field cannot be Empty</string>
    <string name="passwordLength">Password cannot be less than 6 characters</string>
    <string name="enter_valid_email">Please Enter Valid Email</string>
    <string name="enter_valid_pincode">Please Enter Verification Code</string>
    <string name="enter_phone">Mobile Number Cannot be Empty</string>
    <string name="confirm_password_error">Confirm Password did not match</string>
    <string name="enter_username">Enter UserName</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_company_name">Enter Company Name</string>
    <string name="enter_fullname">Enter Full Name</string>
    <string name="write_something_here">Enter Message </string>
    <string name="filed_cannot_be_empty">This field cannot be empty</string>
    <string name="enter_phonenumber">Enter Phone Number</string>
    <string name="enter_your_message">Enter your message here</string>
    <string name="same_password_error">New password should be changed from old password</string>
    <string name="select_language">Select Language</string>
    <string name="english">English</string>
    <string name="arabic">العربية</string>
    <string name="email_id">Email ID</string>
    <string name="how_do_you_want_to_set_your_photo">How do you want to set your photo?</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="internet_issue">Internet Issue,Upload Image Again</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="or_continue_with">Or Continue With</string>
    <string name="don_t_you_have_an_account">DON\'T YOU HAVE AN ACCOUNT?</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="i_agree_to_the_terms_and_conditions">I agree to the Terms and Conditions</string>
    <string name="select_terms_and_conditions">Accept terms and conditions to proceed</string>
    <string name="TermsCondition">Terms and Conditions</string>
    <string name="ContactUs">Contact Us</string>
    <string name="BEQUICO">Be Quico</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="phone_verification">Phone Verification</string>
    <string name="you_can_change_your_language_anytime">You can change your language anytime</string>
    <string name="enter_your_phone_number_in_order_to_reset_your_password">Enter your phone number in order to reset your password</string>
    <string name="a_verification_code_has_been_sent_to_your_mobile_phone">A verification code has been sent \n to your mobile phone</string>
    <string name="haven_t_received_code_yet">Haven\'t received code yet?</string>
    <string name="verify">Verify</string>
    <string name="change_password">Change Password</string>
    <string name="find_quico">Find Quico</string>
    <string name="plumbing_services">PLUMBING \n SERVICES</string>
    <string name="no_notification_found">No notification found</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="Electician_Services">Electician Services</string>
    <string name="featured">Featured</string>
    <string name="search">Search</string>
    <string name="sort_by">Sort By</string>
    <string name="MyFavorites">My Favorites</string>
    <string name="no_favorite_item_found">No Favorite Item Found</string>
    <string name="no_chat_found">No Chat Found</string>
    <string name="type_your_message_here">Type your message here</string>
    <string name="name">Name</string>
    <string name="company_name">Company Name</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="done">Done</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit">Edit</string>
    <string name="MyAccount">My Account</string>
    <string name="address">Address</string>
    <string name="i_agree_to_the">I agree to the  </string>
    <string name="about">About</string>
    <string name="project">Projects</string>
    <string name="photos">Photos</string>
    <string name="reviews">Reviews</string>
    <string name="services_offered">Services Offered</string>
    <string name="contact_details">Contact Details</string>
    <string name="dummy_address">I Rise Tower, 9 ,Al Khareef 2 Street.</string>
    <string name="website">Website</string>
    <string name="email">Email</string>
    <string name="social_media">Social Media</string>
    <string name="chat_with_us">Chat With Us</string>
    <string name="write_a_review">Write a review</string>
    <string name="rate_review">Rate &amp; Review</string>
    <string name="rate_your_experience">RATE YOUR EXPERIENCE</string>
    <string name="start_writing_your_review">START WRITING YOUR REVIEW</string>
    <string name="no_review_found">No Review Found</string>
    <string name="media">Media</string>
    <string name="document">Document</string>
    <string name="location">Location</string>
    <string name="select_area">Select Area</string>
</resources>