<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



    <com.app.quico.ui.views.CustomRecyclerView
        android:id="@+id/rv_reviews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="false"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/x10"
       />


    <Button
        android:id="@+id/btn_writeReview"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x40"
        android:layout_margin="@dimen/x15"
        android:background="@drawable/rounded_green_button"
        android:text="@string/write_a_review"
        android:textColor="@color/white"
        android:textSize="@dimen/x14" />

    <com.app.quico.ui.views.AnyTextView
        android:id="@+id/txt_no_data"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x140"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/no_review_found"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/x15"
        android:visibility="gone"
        app:typeface="@string/font_normal" />

</LinearLayout>
