<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/x10"
        android:orientation="vertical">

        <com.app.quico.ui.views.AnyTextView
            android:id="@+id/txt_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lorem_small"
            android:textColor="@color/app_black_text"
            android:textSize="@dimen/x14"
            app:typeface="@string/font_normal" />

        <com.app.quico.ui.views.AnyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/x10"
            android:layout_marginTop="@dimen/x10"
            android:text="@string/services_offered"
            android:textColor="@color/sky_blue"
            android:textSize="@dimen/x16"
            app:typeface="@string/font_normal" />

    </LinearLayout>

    <com.app.quico.ui.views.CustomRecyclerView
        android:id="@+id/rv_services"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/x10"
        android:orientation="vertical">

        <com.app.quico.ui.views.AnyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/x10"
            android:layout_marginTop="@dimen/x10"
            android:text="@string/contact_details"
            android:textColor="@color/sky_blue"
            android:textSize="@dimen/x16"
            app:typeface="@string/font_normal" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical">

            <com.app.quico.ui.views.AnyTextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="@color/black"
                android:textSize="@dimen/x14"
                app:typeface="@string/font_semibold" />

            <com.app.quico.ui.views.AnyTextView
                android:id="@+id/txt_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/address"
                android:layout_marginTop="@dimen/x5"
                android:text="@string/dummy_address"
                android:textColor="@color/app_black_text"
                android:textSize="@dimen/x14"
                app:typeface="@string/font_normal" />

            <RelativeLayout
                android:id="@+id/btnAddress"
                android:layout_width="@dimen/x40"
                android:layout_height="@dimen/x40"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/circle">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/location" />

            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/x15"
            android:gravity="center_vertical">

            <com.app.quico.ui.views.AnyTextView
                android:id="@+id/phoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textColor="@color/black"
                android:textSize="@dimen/x14"
                app:typeface="@string/font_semibold" />

            <com.app.quico.ui.views.AnyTextView
                android:id="@+id/txt_phoneNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phoneNumber"
                android:layout_marginTop="@dimen/x5"
                android:text="+1 123 456 789"
                android:textColor="@color/app_black_text"
                android:textSize="@dimen/x14"
                app:typeface="@string/font_normal" />

            <RelativeLayout
                android:id="@+id/btnPhoneNumber"
                android:layout_width="@dimen/x40"
                android:layout_height="@dimen/x40"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/circle">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/phone" />

            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/x15"
            android:gravity="center_vertical">

            <com.app.quico.ui.views.AnyTextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="@dimen/x14"
                app:typeface="@string/font_semibold" />

            <com.app.quico.ui.views.AnyTextView
                android:id="@+id/txt_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email"
                android:layout_marginTop="@dimen/x5"
                android:text="brainwilliams@gmail.com"
                android:textColor="@color/app_black_text"
                android:textSize="@dimen/x14"
                app:typeface="@string/font_normal" />

            <RelativeLayout
                android:id="@+id/btnEmail"
                android:layout_width="@dimen/x40"
                android:layout_height="@dimen/x40"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/circle">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/email" />

            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/x15"
            android:gravity="center_vertical">

            <com.app.quico.ui.views.AnyTextView
                android:id="@+id/website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/website"
                android:textColor="@color/black"
                android:textSize="@dimen/x14"
                app:typeface="@string/font_semibold" />

            <com.app.quico.ui.views.AnyTextView
                android:id="@+id/txt_website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/website"
                android:layout_marginTop="@dimen/x5"
                android:text="www.domain.com"
                android:textColor="@color/app_black_text"
                android:textSize="@dimen/x14"
                app:typeface="@string/font_normal" />

            <RelativeLayout
                android:id="@+id/btnWebsite"
                android:layout_width="@dimen/x40"
                android:layout_height="@dimen/x40"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/circle">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/website" />

            </RelativeLayout>

        </RelativeLayout>

        <com.app.quico.ui.views.AnyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x15"
            android:text="@string/social_media"
            android:textColor="@color/black"
            android:textSize="@dimen/x14"
            app:typeface="@string/font_semibold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x10"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btn_fb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/facebook" />

            <ImageView
                android:id="@+id/btn_insta"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/instagram" />

            <ImageView
                android:id="@+id/btn_google"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/google" />

            <ImageView
                android:id="@+id/btn_linkedin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/linkdin" />

            <ImageView
                android:id="@+id/btn_twitter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/twitter" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_chat_with_us"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x40"
            android:layout_marginBottom="@dimen/x10"
            android:layout_marginTop="@dimen/x15"
            android:background="@drawable/rounded_green_button"
            android:text="@string/chat_with_us"
            android:textColor="@color/white"
            android:textSize="@dimen/x14" />

    </LinearLayout>


</LinearLayout>